--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "@tailwindcss/vite": "^4.1.7",
+    "chart.js": "^4.4.9",
+    "chartjs-plugin-annotation": "^3.1.0",
+    "tailwindcss": "^4.1.7",
+    "vue": "^3.5.15"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.3",
+    "@babel/types": "^7.18.10",
+    "@vitejs/plugin-vue": "^5.2.4",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7",
-    "vue-tsc": "^1.8.27",
-    "@babel/types": "^7.18.10"
+    "vite": "^6.3.5",
+    "vue-tsc": "^1.8.27"
   }
 }
